# Renderstein

./: .gitignore  README.md
Renderstein/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  objface.cpp  objface.h  objmodel.cpp  objmodel.h  objparser.h  objparsermodel.cpp  objparsermodel.h  oglwidget.cpp  oglwidget.h  simplerenderwidget.h  triangle.h  vec2.cpp  vec2.h  vec2generic.cpp  vec2generic.h  vec3.cpp  vec3.h  vec3generic.cpp  vec3generic.h
Renderstein/src/model/: objmodel.cpp  objmodel.h
Renderstein/src/view/: mainwindow.cpp  simplerenderwidget.cpp
Renderstein/src/view/opengl/: oglwidget.h
